# log4rs-fluentd

./: Cargo.toml  README.md
examples/: from_conf.rs  manually.rs
src/: fluentd.rs  lib.rs
