[package]
name = "log4rs-fluentd"
version = "0.2.0"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/wayk/log4rs-fluentd"
repository = "https://github.com/wayk/log4rs-fluentd"
keywords = ["logger", "log", "logging", "fluentd"]
authors = ["François Dubois <fdubois@devolutions.net>"]
description = "Fluentd appender for log4rs"

[dependencies]
log = { version = "0.4", default_features = false, features = ["serde"] }
log4rs = { version = "0.8", features = ["simple_writer"] }
poston = "0.1.4"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
tempfile = "3.0"
